# GDGFestgles3

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/hassanabid/gdgfestgles3/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: RendererES2.cpp  glesjni.cpp  glesjni.h
app/src/main/java/com/hassanabid/gdgfestgles3/: GLESJNILib.java  GLESJNIView.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/hassanabid/gdgfestgles3/: ExampleUnitTest.java
